# python_projects

./: .gitignore  README_neuralforecast.txt  README_night_infrared_ir_camera.txt  README_stano_numero_emiratino_che_invia_sms_con_allegati.txt  pyproject-torch.toml  pyproject_torch_gpu.toml  requirements_ai_agents.txt  requirements_causal.txt  requirements_causal_cpu.txt  requirements_causal_gpu.txt  requirements_causal_gpu_312.txt  requirements_cuda.txt  requirements_diwang.txt  requirements_drbo.txt  requirements_ipredict.txt  requirements_llm.txt  requirements_lotusai.txt  requirements_mapproxy.txt  requirements_mitsuba.txt  requirements_ollama.txt  requirements_optim.txt  requirements_pandas.txt  requirements_polars.txt  requirements_py311.txt  requirements_py312.txt  requirements_sklearn.txt  requirements_sklearn_gpu.txt  requirements_sklearn_v2.txt  requirements_sktime.txt  requirements_sktime_plain.txt  requirements_tfv2.txt  requirements_tfv2_cpu.txt  requirements_tfv2_gpu.txt  requirements_torch.txt  requirements_torch_cpu.txt  requirements_torch_gpu.txt  requirements_torch_gpu_only.txt  requirements_tsai.txt  requirements_yolo.txt
check_adaface/: pyproject.toml
check_ai_agent/: check_agent.py  pyproject.toml  requirements.txt
check_cdt/: check_sid.py  pyproject.toml  r-requirements.cmd  requirements.txt
check_deepface/: .gitignore  README_deepface.txt  README_face_verify.txt  check_deepface.py  check_face_comparison.py  check_face_detector.py  check_gray_images.py  pyproject.toml
check_dspy/: README.txt  check_dspy.py  pyproject.toml
check_face_embedding/: .gitignore  Claude output 2.docx  README.txt  README_agw_model.txt  README_clipreid.txt  README_fastreid.txt  README_insightface.txt  README_new_classification.txt  README_transforms.txt  README_transreid.txt  check_adaface.py  check_arcface.py  check_clipreid.py  check_deepface.py  check_double_violation.py  check_face_analyzing.py  check_face_solver.py  check_fastreid.py  check_gdown.py  check_insightface.py  check_maurizio_roc_curve.py  check_torchreid.py  check_transreid.py  extract_faces.py  logging_config_post.ini  pyproject.toml  violations.txt
check_face_embedding/.maurizio_dataset/: labels.xlsx
check_face_embedding/fastreid/: __init__.py  _fastreid.py
check_face_embedding/post_processing/: face_analyzer.py  face_extractor.py  face_solver.py  image_classifier.py  image_embedding.py  lab_dress_glove.py  pose_analyzer.py  utils.py
check_face_embedding/transreid/: _transreid.py
check_face_recognition/: README_face_comparison.txt  README_face_recognition.txt  README_microsoft365_docs.txt  check_face.py  check_face_rot.py  check_inception_resnet.py  check_local_cam.py  check_tracking.py  euler_to_matrix.py  pyproject.toml
check_face_recognition/temp/: sixdrepnet360.py
check_lightning/: check1.py  pyproject.toml
check_rearchitecting/: main.py  pyproject.toml  utils.py
check_rearchitecting/Rearchitecting-LLMs-main/: .gitignore  README.md  REFERENCES.MD  clean_notebooks.py  clean_notebooks_ci.py  optipfair_llm_reference_manual.txt
check_rearchitecting/Rearchitecting-LLMs-main/APPB/: APPB_NB01_examples.ipynb  README.md
check_rearchitecting/Rearchitecting-LLMs-main/APPC/: APPC_NB01_examples.ipynb  README.md
check_rearchitecting/Rearchitecting-LLMs-main/CH02/: CH02_NB01_Depth_pruning_evaluation.ipynb  CH02_NB02_Knowledge_Recovery.ipynb  README.md
check_rearchitecting/Rearchitecting-LLMs-main/CH03/: CH03_NB01_Model_structures.ipynb  README.md
check_rearchitecting/Rearchitecting-LLMs-main/CH04/: CH04_NB01_Cosine_Similarity.ipynb  README.MD
check_rearchitecting/Rearchitecting-LLMs-main/CH05/: CH05_NB01_width_pruning.ipynb  CH05_NB02_data_sms_wiki.ipynb  CH05_NB03_bonus.ipynb  README.md
check_rearchitecting/Rearchitecting-LLMs-main/CH06/: CH06_NB01_Knowledge_Recovery_T4.ipynb  CH06_NB02_Width_Pruned_Model_Recovery.ipynb  CH06_NB03_Hands_on.ipynb  CH06_NB03_Hands_on_qwen3_5.ipynb  CH06_NB_EXP01_DataDriven_Blocks_15K.ipynb  CH06_NB_EXP01_DataDriven_Blocks_2K.ipynb  CH06_NB_EXP01_DataDriven_Blocks_40K.ipynb  CH06_NB_EXP02_DataDriven_Consecutive_Blocks_2K.ipynb  CH06_NB_EXP03_Last_Blocks_2K.ipynb  CH06_NB_EXP04_Last_Blocks_Preservation_2K.ipynb  README.md
check_rearchitecting/Rearchitecting-LLMs-main/CH07/: CH07_NB01_From_Matrices_to_Quantization.ipynb  CH07_NB02_L4_QLoRA_QDoRA.ipynb  CH07_NB02_T4_QLoRA_QDoRA.ipynb  CH07_NB03_L4_Hands_On.ipynb  CH07_NB_dataset_generator.ipynb  README.md
check_rearchitecting/Rearchitecting-LLMs-main/CH08/: CH08_NB01_L4_KVCache_HuggingFace.ipynb  CH08_NB01_T4_KVCache_HuggingFace.ipynb  CH08_NB02_L4_KVCache_vLLM.ipynb  CH08_NB02_T4_KVCache_vLLM.ipynb  CH08_NB03_L4_Llama-3.1-8B.ipynb  CH08_NB03_Remove_Attention_.ipynb  CH08_NB04_KD.ipynb  README.md
check_rearchitecting/Rearchitecting-LLMs-main/benchmarks/: benchmarks_base.ipynb
check_rearchitecting/optipfair-main/: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  README.md  completebias_test.py  mkdocs.yml  optipfair_llm_reference_manual.txt  optipfair_maint.md  pyproject.toml  setup.py  test.py
check_rearchitecting/optipfair-main/docs/: api.md  bias_visualization.md  contributing.md  examples.md  index.md  installation.md  knowledge_distillation.md  neuron-bias-fairness-pruning-spec.md  roadmap.md  usage.md
check_rearchitecting/optipfair-main/examples/: README.md  basic_pruning_mlp.ipynb  bias_compatibility_check.ipynb  data-driven_width_pruning.ipynb  depth_pruning.ipynb  expansion_divisor_example.ipynb  fairness_aware_pruning_demo.ipynb  knowledge_distillation.ipynb  knowledge_distillation_express.ipynb  layer_importance_analysis.ipynb  performance_comparison_expansion_divisor.ipynb  prune_llama.py  pruning_compatibility_check.ipynb  pruning_compatibility_check.ipynb.ipynb  selective_layer_width_pruning.py
check_rearchitecting/optipfair-main/optipfair/: __init__.py
check_rearchitecting/optipfair-main/tests/: test_bias_visualization.py  test_cli.py  test_depth.py  test_distillation_loss.py  test_distillation_mapping.py  (+6 more)
(+3235 files in other folders)
