[project]
name = "check-face-embedding"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "opencv-python",
    "gdown",
    "typing-extensions",
    "pydantic",

    "torch",
    "torchvision",
    "pytorch_lightning",

    "tf-keras",
    "onnxruntime",

    "tensorboard",
    "path",

    "facenet-pytorch",
    "insightface",
    "deepface",
    "mediapipe",
    "ultralytics<9.0.0",

    # "fastreid" requires Python 3.14 AND torch 1.13.1
    # NO: it seems fatreid-1.4.0 has removed the check on Torch version
    # Dependencies:
    #   the library requires "faiss" but in Windows it is available ONLY the CPU version
    "faiss-cpu",
    "scikit-learn",
    "yacs",

    "scipy-stubs~=1.17.1",
]




[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
