[project]
name = "broiler-counting"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    # "opencv-python",
    "matplotlib",
    "torch",
    "torchvision",

    "lightning",
    "scipy-stubs~=1.18.0",
    "pandas-stubs~=3.0.3",
]



[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
