[project]
name = "check-rearchitecting"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "torch==2.8.0",
    "transformers==4.55.4",
    "accelerate==1.10.1",
    "lm_eval==0.4.9.1",
    "sentencepiece==0.2.1",
    "sentence-transformers==5.1.0",
    "optipfair==0.1.4",
    "hf_xet==1.5.1",

    "langdetect",
    "codecarbon"
]



[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
